--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,24 @@
+@media only screen and (min-width: 769px) {
+footer {
+		position: relative;
+		bottom: 0;
+		color: #fff;
+		background-color: #7B1FA2;
+		width: 100%;
+		height: 9em;
+		z-index: 5;
+	}
 body{
-background-color:#577DFF;
+background-color:#7B1FA2;
 color:#fff;
 font-family:Arial, Helvetica, sans-serif;
 font-size:16px;
 line-height:1.6em;
 margin:0;
+}
+.name:hover {
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
 }
 
 .container{
@@ -14,12 +28,12 @@ overflow:hidden;
 }
 
 #main-header{
-background-color:#577DFF;
+background-color:#7B1FA2;
 color:#fff;
 }
 
 #navbar{
-background-color:#333;
+background-color:#7B1FA2;
 color:#fff;
 margin:auto;
 }
@@ -58,11 +72,16 @@ box-sizing: border-box;
 }
 
 #main-footer{
-	background: rgb(160, 159, 159);
 	color:#fff;
 	text-align: center;
-	padding:10px;
-	margin-top:20px;
+	padding:5px;
+	position: relative;
+	bottom: 0;
+	background-color: #7B1FA2;
+	width: 100%;
+	height: 3em;
+	z-index: 5;
+}
 }
 
 
