--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ margin:0;
     transform: translateY(-0.3rem);
     box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
 }
+botton:active {
+	box-shadow: none;
+	top: 5px;
+  }
 
 .container{
 width:80%;
